--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=dcard_db
-DB_USERNAME=dcard_db_user
+DB_NAME=demo
+DB_USERNAME=db_user
 DB_PASSWORD=user_password
 DB_SSL_MODE=disable
