fix docker file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,5 +16,7 @@ services:
     ports:
       - 8080:8080
     restart: always
+    environment:
+      DB_HOST: postgres
     depends_on:
       - postgres
