--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,14 +9,14 @@ services:
       - ./docker-pg-init:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
-  backend:
-    container_name: 'login-system'
-    image: 'my-login-system'
-    build: ./
-    ports:
-      - 8080:8080
-    restart: always
-    environment:
-      DB_HOST: postgres
-    depends_on:
-      - postgres
+#  backend:
+#    container_name: 'login-system'
+#    image: 'my-login-system'
+#    build: ./
+#    ports:
+#      - 8080:8080
+#    restart: always
+#    environment:
+#      DB_HOST: postgres
+#    depends_on:
+#      - postgres
